# Qt_OOP_Cars

./: CMakeLists.txt  Dependencies.puml  main.cpp
Headers/: Car.h  CosCRUDGUI.h  CosReadOnly.h  DTO.h  GUI.h  ListViewModel.h  Observable.h  Observer.h  Repository.h  Service.h  Spalatorie.h  TableViewModel.h  UI.h  Undo.h  Validator.h  tests.h
Sources/: Car.cpp  DTO.cpp  GUI.cpp  Repository.cpp  Service.cpp  Spalatorie.cpp  UI.cpp  Validator.cpp  tests.cpp
